--- a/service.html
+++ b/service.html
@@ -19,6 +19,10 @@
             <br>Last modified: June 1th, 2019
 
             <br><br><b>Welcome to TinyPOS!</b>
+            
+            <br><br><b>Email:oppinfo@163.com   iMessage:iyomet@icloud.com</b>
+            
+            <br><br><b>TEL:+(86)13813977806</b>
 
             <br>Please read the following Terms of Service carefully. Your use of TinyPOS means you have accepted this
             agreement.
