--- a/service.html
+++ b/service.html
@@ -24,7 +24,7 @@
             
             <br><br><b>TEL:+(86)13813977806</b>
 
-            <br>Please read the following Terms of Service carefully. Your use of TinyPOS means you have accepted this
+            <br><br>Please read the following Terms of Service carefully. Your use of TinyPOS means you have accepted this
             agreement.
 
             <br>This agreement also includes the Privacy Policy and other business rules. Please read them carefully.
