--- a/tinyposreadme.html
+++ b/tinyposreadme.html
@@ -1,1 +1,1 @@
-<embed id="pdfPlayer" src="./tinyposreadme.pdf" type="application/pdf" width="100%" height="100%" >
+<iframe src="./tinyposreadme.pdf" width="100%" height="100%" scroll="no"></iframe>
